--- a/Dockerfiles/Dockerfile.consumer
+++ b/Dockerfiles/Dockerfile.consumer
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python-base
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1 \
@@ -7,14 +7,15 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 WORKDIR /app
 
+
 COPY requirements.txt ./
 
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip install --no-cache-dir -r requirements.txt -f https://download.pytorch.org/whl/torch_stable.html
 
 COPY . .
 
-# Runs on Port 5000
 EXPOSE 5000
 
-# Runs a Generic IOT Producer & Latency Consumer Indefinitely
-CMD ["python", "iot_producer.py"]
+# Runs Consumer Indefinitely
+CMD ["python", "consumer.py"]
