--- a/Dockerfiles/Dockerfile.db_consumer
+++ b/Dockerfiles/Dockerfile.db_consumer
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python-base
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1 \
@@ -7,17 +7,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 WORKDIR /app
 
-
 COPY requirements.txt ./
-
-
-RUN pip install --no-cache-dir -r requirements.txt
-
 
 COPY . .
 
-# Runs on Port 5000
 EXPOSE 5000
 
 # Runs Consumer Indefinitely
-CMD ["python", "consumer.py"]
+CMD ["python", "db_consumer.py"]
