--- a/tasks/playbook_install_apt_packages.yaml
+++ b/tasks/playbook_install_apt_packages.yaml
@@ -20,93 +20,4 @@
       - python3-dev
       - build-essential
       - default-jdk
-    state: present
-
-- name: "Create keyrings directory for Kubernetes"
-  file:
-    path: /etc/apt/keyrings
-    state: directory
-    mode: '0755'
-
-- name: "Add Kubernetes GPG key"
-  shell: |
-    curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.31/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-
-- name: "Add Kubernetes APT repository"
-  shell: |
-    echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
-
-- name: "Update APT repositories after adding Kubernetes repository"
-  apt:
-    update_cache: yes
-
-- name: "Install Kubernetes packages (kubelet, kubeadm, kubectl)"
-  apt:
-    name:
-      - kubelet
-      - kubeadm
-      - kubectl
-    state: present
-    force_apt_get: yes
-
-- name: "Hold Kubernetes packages at their current version"
-  apt:
-    name:
-      - kubelet
-      - kubeadm
-      - kubectl
-    state: present
-    force_apt_get: yes
-    allow_downgrade: yes
-    lock_version: yes
-
-- name: "Enable kubelet service"
-  systemd:
-    name: kubelet
-    enabled: yes
-    state: started
-
-- name: "Enable IPv4 forwarding"
-  copy:
-    content: |
-      net.ipv4.ip_forward = 1
-    dest: /etc/sysctl.d/k8s.conf
-
-- name: "Apply sysctl settings"
-  command: sysctl --system
-
-- name: "Turn off swap"
-  command: swapoff -a
-
-- name: "Ensure swap is off on reboot (optional)"
-  replace:
-    path: /etc/fstab
-    regexp: '^\s*swap\s'
-    replace: '#swap is disabled for Kubernetes'
-
-- name: "Install containerd"
-  apt:
-    name:
-      - containerd
-    state: present
-
-- name: "Generate default containerd config"
-  shell: |
-    containerd config default > config.toml
-    cp config.toml /etc/containerd/config.toml
-
-- name: "Modify containerd config for systemdCgroup"
-  lineinfile:
-    path: /etc/containerd/config.toml
-    regexp: '^(\s*SystemdCgroup\s*=\s*)false'
-    line: '    SystemdCgroup = true'
-
-- name: "Restart containerd service"
-  systemd:
-    name: containerd
-    state: restarted
-
-- name: "Restart Docker service"
-  systemd:
-    name: docker
-    state: restarted
+      - git
