--- a/playbook_master.yaml
+++ b/playbook_master.yaml
@@ -30,7 +30,6 @@
   - ansible-base
 
   tasks:
-  # @@ You have to write the following child playbook @@
   - import_tasks: tasks/playbook_check_variables.yaml
 
 
@@ -47,128 +46,132 @@
   - ansible-base
   - openstack.cloud.collection
   
-  tasks:    # the task to be performed
-  # @@ You have to write the following child playbook @@
+  tasks:    
   - import_tasks: tasks/playbook_create_vms.yaml
 
 #####################################################
 ### Play 3: Get facts from Cloud VM
 #
-# In this play, you must retrieve various facts of the
-# VMs you have created. The most important are their
-# private IP addresses that you will need in subsequent
-# plays
 #####################################################
 - name: "Play 3: Perform fact gathering on all Cloud VMs"
   hosts: LocalMC  # specified in the Inventory file
   remote_user:  "{{ local_user }}"
-
   gather_facts: no
   become: false
   collections:
   - ansible-base
   - openstack.cloud.collection
 
-  tasks:    # the task to be performed
-  # @@ You have to write the following child playbook @@
+  tasks:    
   - import_tasks: tasks/playbook_retrieve_facts_vms.yaml
 
 #####################################################
 ### Play 4: Install packages on our Cloud VMs
 #
-# In this play, you should be installing all the packages
-# you need for this assignment including pre reqs for Docker.
-# This will also include Python packages installed via pip
+# Installing necessary packages for Kubernetes and Python
 #####################################################
 - name: "Play 4 - Install various packages on Cloud VMs"
   hosts: CloudVMs   # specified in the Inventory file
-  remote_user: "{{ cloud_user }}" # since this play operates on the cloud
-                                  # VMs, the user on those VMs is the
-                                  # cloud_user variable
-  become: true  # by setting this, we perform operations with sudo privilege
+  remote_user: "{{ cloud_user }}" 
+  become: true
   gather_facts: no
   collections:
   - ansible-base
 
-  tasks:    # the task to be performed
-  # @@ You have to write the following child playbooks @@
+  tasks:    
   - import_tasks: tasks/playbook_install_apt_packages.yaml
   - import_tasks: tasks/playbook_install_pip_packages.yaml
 
 #####################################################
-### Play 5: Install Docker on our Cloud VMs
+### Play 5: Install Docker and Kubernetes on Cloud VMs
+#
+# Installing Docker and Kubernetes packages
+#####################################################
+- name: "Play 5 - Install Docker and Kubernetes on Cloud VMs"
+  hosts: CloudVMs   
+  remote_user: "{{ cloud_user }}" 
+  gather_facts: yes   
+  become: true
+  collections:
+  - ansible-base
+
+  tasks:    
+  - import_tasks: tasks/playbook_install_docker.yaml
+  - import_tasks: tasks/playbook_install_kubernetes.yaml
+
+#####################################################
+### Play 9: Set firewall rules for Kubernetes and Private Registry
 #
 #####################################################
-- name: "Play 5 - Install Docker on Cloud VMs"
-  hosts: CloudVMs   # specified in the Inventory file
-  remote_user: "{{ cloud_user }}" # since this play operates on the cloud
-                                  # VMs, the user on those VMs is the
-                                  # cloud_user variable
-  gather_facts: yes   # we will need to get variety of facts like arch, OS release
-  become: true  # we set it here instead of doing per task
-  collections:
-  - ansible-base
-
-  tasks:    # the task to be performed
-  - import_tasks: tasks/playbook_install_docker.yml
-
-#####################################################
-### Play 6: Download and Install Kafka on our Cloud VMs
-#
-#####################################################
-
-# @@ My suggestion is that instead of each VM downloading the
-#    entire kafka distribution, we could download it locally
-#    on the controller machine.
-# 
-#    Subsequently, we then copy the *.tgz file to each VM where
-#    we untar and uncompress it @@
-- name: "Play 6a - Download kafka locally"
-  hosts: LocalMC  # specified in the Inventory file
-  remote_user:  "{{ local_user }}"      # note that the user is cc on Chameleon
+- name: "Play 9 - Handle Firewall rules"
+  hosts: CloudVMs   
+  remote_user: "{{ cloud_user }}" 
+  become: true
   gather_facts: no
-  become: false  # no need here.
-  collections:
-  - ansible-base
-
-  tasks:    # the task to be performed
-  # @@ You have to write the following child playbook @@
-  - import_tasks: tasks/playbook_download_kafka.yaml
-
-- name: "Play 6b - Install Kafka on Cloud VMs"
-  hosts: CloudVMs   # specified in the Inventory file
-  remote_user: "{{ cloud_user }}" # since this play operates on the cloud
-                                  # VMs, the user on those VMs is the
-                                  # cloud_user variable
-  hosts: CloudVMs          # specified in the Inventory file
-  remote_user:  "{{ cloud_user }}"      # note that the user is cc on Chameleon
-  gather_facts: no
-  become: false  # we set it per task
-  collections:
-  - ansible-base
-
-  tasks:    # the task to be performed
-  # @@ You have to write the following child playbook @@
-  - import_tasks: tasks/playbook_install_kafka.yaml
-
-#####################################################
-### Play 7: Set firewalld rules
-#####################################################
-
-- name: "Play 7 - Handle Firewalld policies"
-  hosts: CloudVMs   # specified in the Inventory file
-  remote_user: "{{ cloud_user }}" # since this play operates on the cloud
-                                  # VMs, the user on those VMs is the
-                                  # cloud_user variable
-  become: true  # we set it here instead of doing per task unless
-                # there is a need to use non-sudo for any subtask
-  gather_facts: false
   collections:
   - ansible-base
   - community.general
 
-  tasks:    # the task to be performed
+  tasks:    
   - import_tasks: tasks/playbook_set_firewalld_rules.yaml
 
-...
+#####################################################
+### Play 6: Configure Private Docker Registry
+#
+#####################################################
+- name: "Play 6 - Configure Private Docker Registry"
+  hosts: [VM1]  
+  remote_user: "{{ cloud_user }}" 
+  become: true
+  gather_facts: no
+  collections:
+  - ansible-base
 
+  tasks:    
+  - import_tasks: tasks/playbook_configure_docker_registry.yaml
+
+#####################################################
+### Play 7: Configure containerd for Kubernetes and Private Registry
+#
+#####################################################
+- name: "Play 7 - Configure containerd for Kubernetes and Private Registry"
+  hosts: CloudVMs   
+  remote_user: "{{ cloud_user }}" 
+  become: true
+  gather_facts: no
+  collections:
+  - ansible-base
+
+  tasks:    
+  - import_tasks: tasks/playbook_configure_containerd.yaml
+
+#####################################################
+### Play 8: Restart containerd and Docker services
+#
+#####################################################
+- name: "Play 8 - Restart containerd and Docker services"
+  hosts: CloudVMs   
+  remote_user: "{{ cloud_user }}" 
+  become: true
+  gather_facts: no
+  collections:
+  - ansible-base
+
+  tasks:    
+  - import_tasks: tasks/playbook_restart_services.yaml
+
+
+#####################################################
+### Play 10: Disable Swap on Cloud VMs
+#
+#####################################################
+- name: "Play 10 - Disable Swap on Cloud VMs"
+  hosts: CloudVMs   
+  remote_user: "{{ cloud_user }}" 
+  become: true
+  gather_facts: no
+  collections:
+  - ansible-base
+
+  tasks:    
+  - import_tasks: tasks/playbook_disable_swap.yaml
